src/scss/App.scss
$openWhite: #ffffff;
$openAllyLink: #3878b7;
$openLawDarkGreen: #3f7578;
$openLawLightGreen: #6cb5ba;
$openLawDarkBlue: #225160;
$openLawTeal: #00a8b3;
$openLawA11yTeal: #00818a;
$openLawLightBrown: #cf9768;
$openLawA11yBrown: #a36633;
$openLawGold: #b49857;
$openLawCharcoal: #22283a;
$openLawArapawa: #225160;
$openLawGray: #757575;
$openLawDarkGray: #3d3d3d;
$openLawMediumGray: #e0e0e0;
$openLawLightGray: #f5f5f5;


@import url('https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap');
@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800&display=swap');

@mixin header-one {
  font-family: 'Nunito', sans-serif;
  font-size: 40px;
}

@mixin header-two {
  font-family: 'Nunito', sans-serif;
  font-size: 30px;
}

@mixin header-three {
  font-family: 'Nunito Sans', sans-serif;
  font-size: 24px;
}

@mixin header-four {
  font-family: 'Nunito Sans', sans-serif;
  font-size: 20px;
}

@mixin header-five {
  font-family: 'Nunito Sans', sans-serif;
  font-size: 16px;
}

@mixin body {
  font-family: 'Nunito Sans', sans-serif;
  font-size: 15px;
}

@mixin nav-header {
  font-family: 'Nunito Sans', sans-serif;
}

@mixin card-style {
  background: $openWhite;
  box-shadow: 0px 4px 13px rgba(0, 0, 0, 0.25);
  border-radius: 5px;
}

@mixin center {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

@mixin button-style {
  @include header-four;
  color: $openLawA11yBrown;
  background: none;
  width: 156px;
  height: 45px;
  border: 2px solid $openLawA11yBrown;
  border-radius: 5px;
}

// Normalizing
*,:after,:before{-webkit-box-sizing:inherit;box-sizing:inherit}html{-webkit-box-sizing:border-box;box-sizing:border-box}input[type=email],input[type=password],input[type=search],input[type=text]{-webkit-appearance:none;-moz-appearance:none}/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{-webkit-box-sizing:content-box;box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=reset],[type=submit],button,html [type=button]{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{-webkit-box-sizing:border-box;box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{-webkit-box-sizing:border-box;box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}body,html{height:100%}html{font-size:14px}body{margin:0;padding:0;overflow-x:hidden;min-width:320px;background:#fff;font-family:Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;font-size:14px;line-height:1.4285em;color:rgba(0,0,0,.87);font-smoothing:antialiased}h1,h2,h3,h4,h5{font-family:Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;line-height:1.28571429em;margin:calc(2rem - .14285714em) 0 1rem;font-weight:700;padding:0}h1{min-height:1rem;font-size:2rem}h2{font-size:1.71428571rem}h3{font-size:1.28571429rem}h4{font-size:1.07142857rem}h5{font-size:1rem}h1:first-child,h2:first-child,h3:first-child,h4:first-child,h5:first-child{margin-top:0}h1:last-child,h2:last-child,h3:last-child,h4:last-child,h5:last-child{margin-bottom:0}p{margin:0 0 1em;line-height:1.4285em}p:first-child{margin-top:0}p:last-child{margin-bottom:0}a{color:$openAllyLink;text-decoration:none}a:hover{color:#1e70bf;text-decoration:none}::-webkit-selection{background-color:#cce2ff;color:rgba(0,0,0,.87)}::-moz-selection{background-color:#cce2ff;color:rgba(0,0,0,.87)}::selection{background-color:#cce2ff;color:rgba(0,0,0,.87)}input::-webkit-selection,textarea::-webkit-selection{background-color:rgba(100,100,100,.4);color:rgba(0,0,0,.87)}input::-moz-selection,textarea::-moz-selection{background-color:rgba(100,100,100,.4);color:rgba(0,0,0,.87)}input::selection,textarea::selection{background-color:rgba(100,100,100,.4);color:rgba(0,0,0,.87)}body ::-webkit-scrollbar{-webkit-appearance:none;width:10px;height:10px}body ::-webkit-scrollbar-track{background:rgba(0,0,0,.1);border-radius:0}body ::-webkit-scrollbar-thumb{cursor:pointer;border-radius:5px;background:rgba(0,0,0,.25);-webkit-transition:color .2s ease;transition:color .2s ease}body ::-webkit-scrollbar-thumb:window-inactive{background:rgba(0,0,0,.15)}body ::-webkit-scrollbar-thumb:hover{background:rgba(128,135,139,.8)}

::-webkit-scrollbar {
  display: none;
}

button:focus {
  outline: none;
}

a {
  color: $openAllyLink;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

li {
  text-decoration: none;
  list-style-type: none;
}

.main-wrapper {
  overflow: auto;
}

.main-header {
  margin: 25px 0;
}

.main-logo {
  width: 160px;
  max-width: 80%;
}

.container {
  width: 100%;
  padding-right: 15px;
  padding-left: 1vw;
  margin-bottom: 115px;
  video{
    padding: 10%; 
    width: 100%;
  }
}

@media (min-width: 920px) {
  .container {
    max-width: 920px;
  }
}

.section-title {
  @include header-one();
  color: $openLawDarkBlue;
  margin-bottom: 10px;
  margin-top: 0;
}

.section-subtitle {
  @include header-three();
  color: $openLawDarkBlue;
  margin-top: 0;
  margin-bottom: 20px;
}

.highlighted-content {
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-position: top;
  padding-top: 90px;
}

.home-wrapper {
  margin-top: 50px
}

.side-wrapper {
  width: 100%;
  position: relative;
  display: inline-block;
  z-index: 10;
}

.border {
  border-right: 1px solid #d0d0d0;
  
  @media (max-width: 766px) {
    align-self: center;
    margin: 20px 0 15px 0;
    width: 30%;
    border-bottom: 1px solid #d0d0d0;
  }
}

.icon {
  &-small {
    width: 10px;
    vertical-align: baseline;
  }
  &-medium {
    width: 1em;
  }

  &.link {
    fill: $openAllyLink;
  }
  &.white {
    fill: white;
  }
}

.is-text-center {
  text-align: center;
}

.mission-icon {
  display: block;
  fill: $openLawA11yBrown;
  margin: 0 auto 15px auto;
}

.contact-us-wrapper {
  position: relative;
  width: 100vw;
  height: 280px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.contact-us-container {
  text-align: center;

  h1 {
    @include header-two;
    color: $openLawA11yBrown;
  }

  p {
    @include header-five;
    color: $openLawA11yBrown;
    margin-bottom: 12px;
  }

  .contact-us-button {

    a {
      display: inline-block;
      @include button-style;
      line-height: 41px;
      text-decoration: none;
      transition: 0.3s;

      &:hover {
        color: $openWhite;
        background: $openLawA11yBrown;
      }
    }
  }
}

/*
  Use to display blocks horizontally aligned.
  Example of use: Our Mission / News
	*/

.horizontal-container {
  display: flex;
  flex-direction: column;

  &--spaced {
    justify-content: space-between;
  }

  &__item {
    align-self: center;
    flex: 1 1 0;
    margin-bottom: 20px;

    &:last-child {
      margin-bottom: 0;
    }

    &--small {
      max-width: 167px;
    }
  }
}

@media (min-width: 767px) {

  .side-wrapper {
    width: calc(100% - 25vw);
    &:after {
      content: '';
      position: absolute;
      width: 0px;
      height: 100%;
      top: 0;
      right: 5px;
      z-index: -1;
    }
  }
  
  .horizontal-container {
    flex-direction: row;

    &__item {
      margin-bottom: 0;
    }
  }

  .highlighted-content {
    padding-top: 140px;
  }
}

@keyframes spin {
  to { transform: rotate(360deg); }
}

.spinner {
  animation: spin 1s linear infinite;
  border-radius: 50%;
  border: 5px solid #d3d3d3;
  border-left-color: $openLawDarkGreen;
  display: block;
  height: 70px;
  text-indent: -9999px;
  width: 70px;

  &.centered {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-top: -35px;
    margin-left: -35px;
  }
}

@import "./Nav.scss";
@import "./Search.scss";
@import "./AdvancedSearch.scss";
@import "./Info.scss";
@import "./News.scss";
@import "./NewsList.scss";
@import "./Footer.scss";
@import "./MainContent.scss";
@import "./Result.scss";
@import "./SingleCase.scss";
@import "./PluginsList.scss";
@import "./Microsite.scss"

